--- a/.travis.yml
+++ b/.travis.yml
@@ -85,8 +85,8 @@ jobs:
        - cmake --build . --target install
        - cmake --build . --target pip_package
        # Test python program and wheel...
-       - cp *.whl ../../tubex_lib-X.X.X-cp38-cp38m-ubuntubionic_x86_64.whl
-       - pip3 install ../../tubex_lib-X.X.X-cp38-cp38m-ubuntubionic_x86_64.whl
+       - cp *.whl ../../tubex_lib-X.X.X-cp38-cp38-ubuntubionic_x86_64.whl
+       - pip3 install ../../tubex_lib-X.X.X-cp38-cp38-ubuntubionic_x86_64.whl
        - python ../examples/tuto/01_getting_started/01_getting_started.py
        - cd ../..
        # Test C++ program and bundle...
@@ -102,7 +102,7 @@ jobs:
        - ./my_project
      deploy:
        <<: *deploy_base
-       file: tubex_lib-X.X.X-cp38-cp38m-ubuntubionic_x86_64.whl
+       file: tubex_lib-X.X.X-cp38-cp38-ubuntubionic_x86_64.whl
 
 #   - name: "Raspbian Buster pi Docker"
 #     os: linux
@@ -167,8 +167,8 @@ jobs:
        - cmake --build . --config Debug --target install
        - cmake --build . --config Debug --target pip_package
        # Test python program and wheel...
-       - cp *.whl ../../tubex_lib-X.X.X-cp38-cp38m-win32.whl
-       - pip install ../../tubex_lib-X.X.X-cp38-cp38m-win32.whl
+       - cp *.whl ../../tubex_lib-X.X.X-cp38-cp38-win32.whl
+       - pip install ../../tubex_lib-X.X.X-cp38-cp38-win32.whl
        - python ../examples/tuto/01_getting_started/01_getting_started.py
        - cd ../..
        # Test C++ program and bundle...
@@ -190,7 +190,7 @@ jobs:
        <<: *deploy_base
        file: 
          - tubex_test_x86_vc16.zip
-         - tubex_lib-X.X.X-cp38-cp38m-win32.whl
+         - tubex_lib-X.X.X-cp38-cp38-win32.whl
 
    - name: "Windows Visual Studio 2019 x64 C++ Python 3.8"
      os: windows
@@ -215,8 +215,8 @@ jobs:
        - cmake --build . --config Debug --target install
        - cmake --build . --config Debug --target pip_package
        # Test python program and wheel...
-       - cp *.whl ../../tubex_lib-X.X.X-cp38-cp38m-win_amd64.whl
-       - pip install ../../tubex_lib-X.X.X-cp38-cp38m-win_amd64.whl
+       - cp *.whl ../../tubex_lib-X.X.X-cp38-cp38-win_amd64.whl
+       - pip install ../../tubex_lib-X.X.X-cp38-cp38-win_amd64.whl
        - python ../examples/tuto/01_getting_started/01_getting_started.py
        - cd ../..
        # Test C++ program and bundle...
@@ -238,7 +238,7 @@ jobs:
        <<: *deploy_base
        file: 
          - tubex_test_x64_vc16.zip
-         - tubex_lib-X.X.X-cp38-cp38m-win_amd64.whl
+         - tubex_lib-X.X.X-cp38-cp38-win_amd64.whl
 
    - name: "Windows Visual Studio 2017 x86 C++"
      os: windows
