--- a/.travis.yml
+++ b/.travis.yml
@@ -61,13 +61,12 @@ jobs:
        - sudo apt-get -y install flex bison || true
        - sudo apt-get -y install doxygen graphviz || true
        - sudo apt-get -y install python3.8 || true
-       - sudo apt-get -y install python3-setuptools python3-pip || true
-       - sudo python3 -m pip install --upgrade pip
-       - sudo pip3 install wheel pyIbex
+       - sudo python3.8 -m pip install --upgrade pip
+       - sudo python3.8 -m pip install wheel pyIbex
        - git clone -b v3.1.1 https://github.com/sphinx-doc/sphinx
        - cd sphinx
-       - sudo pip3 install .
-       - sudo pip3 install sphinx-tabs breathe sphinx_rtd_theme
+       - sudo python3.8 -m pip install .
+       - sudo python3.8 -m pip install sphinx-tabs breathe sphinx_rtd_theme
      script: 
        - git clone -b develop https://github.com/lebarsfa/ibex-lib.git
        - cd ibex-lib
@@ -86,7 +85,7 @@ jobs:
        - cmake --build . --target pip_package
        # Test python program and wheel...
        - cp *.whl ../../tubex_lib-X.X.X-cp38-cp38-ubuntubionic_x86_64.whl
-       - pip3 install ../../tubex_lib-X.X.X-cp38-cp38-ubuntubionic_x86_64.whl
+       - sudo python3.8 -m pip install ../../tubex_lib-X.X.X-cp38-cp38-ubuntubionic_x86_64.whl
        - python ../examples/tuto/01_getting_started/01_getting_started.py
        - cd ../..
        # Test C++ program and bundle...
@@ -148,7 +147,7 @@ jobs:
      os: windows
      before_install: 
        - choco install -y visualstudio2019buildtools visualstudio2019-workload-vctools winflexbison
-       - cmd //c "choco install -y doxygen.install graphviz & choco install -y python --version=3.8.3 --x86 & refreshenv.cmd & python -m pip install --upgrade pip & pip install wheel pyIbex & git clone -b v3.1.1 https://github.com/sphinx-doc/sphinx & cd sphinx & pip install . & pip install sphinx-tabs breathe sphinx_rtd_theme & refreshenv.cmd"
+       - cmd //c "choco install -y doxygen.install graphviz & choco install -y python --version=3.8.3 --x86 & refreshenv.cmd & python -m pip install --upgrade pip wheel setuptools & pip install pyIbex & git clone -b v3.1.1 https://github.com/sphinx-doc/sphinx & cd sphinx & pip install . & pip install sphinx-tabs breathe sphinx_rtd_theme & refreshenv.cmd"
        - export PATH=/c/Python38:/c/Python38/Scripts:$PATH
      script: 
        - git clone -b develop https://github.com/lebarsfa/ibex-lib.git
