--- a/.travis.yml
+++ b/.travis.yml
@@ -62,7 +62,9 @@ jobs:
        - sudo apt-get -y install doxygen graphviz || true
        - sudo apt-get -y install python3.8 || true
        - sudo apt-get -y install python3-setuptools python3-pip || true
-       - sudo python3 -m pip install --upgrade pip
+       - sudo python3 -m pip install --upgrade pip wheel setuptools || true
+       - sudo pip3 install --upgrade pip wheel setuptools || true
+       - sudo pip install --upgrade pip wheel setuptools || true
        - sudo python3.8 -m pip install --upgrade pip wheel setuptools
        - sudo python3.8 -m pip install pyIbex
        - git clone -b v3.1.1 https://github.com/sphinx-doc/sphinx
@@ -145,12 +147,12 @@ jobs:
        - cmake --build .
        - ./my_project
 
-   - name: "Windows Visual Studio 2019 x86 C++ Python 3.8"
+   - name: "Windows Visual Studio 2019 x86 C++ Python 3.4"
      os: windows
      before_install: 
        - choco install -y visualstudio2019buildtools visualstudio2019-workload-vctools winflexbison
-       - cmd //c "choco install -y doxygen.install graphviz & choco install -y python --version=3.8.3 --x86 & refreshenv.cmd & python -m pip install --upgrade pip wheel setuptools & pip install pyIbex & git clone -b v3.1.1 https://github.com/sphinx-doc/sphinx & cd sphinx & pip install . & pip install sphinx-tabs breathe sphinx_rtd_theme & refreshenv.cmd"
-       - export PATH=/c/Python38:/c/Python38/Scripts:$PATH
+       - cmd //c "choco install -y doxygen.install graphviz & choco install -y python --version=3.4.4.20200110 --x86 & refreshenv.cmd & python -m pip install --upgrade pip wheel setuptools & pip install pyIbex & git clone -b v3.1.1 https://github.com/sphinx-doc/sphinx & cd sphinx & pip install . & pip install sphinx-tabs breathe sphinx_rtd_theme & refreshenv.cmd"
+       - export PATH=/c/Python34:/c/Python34/Scripts:$PATH
      script: 
        - git clone -b develop https://github.com/lebarsfa/ibex-lib.git
        - cd ibex-lib
@@ -162,14 +164,14 @@ jobs:
        - cd tubex-lib 
        - git submodule init ; git submodule update
        - mkdir build ; cd build
-       - cmake -G "Visual Studio 16" -A Win32 -D CMAKE_CXX_FLAGS=" /D WIN32 /EHsc /D _CRT_SECURE_NO_WARNINGS /wd4267 /wd4244 /wd4305" -D CMAKE_C_FLAGS=" /D WIN32 /EHsc /D _CRT_SECURE_NO_WARNINGS /wd4267 /wd4244 /wd4305" -D CMAKE_PREFIX_PATH="../ibex" -D CMAKE_INSTALL_PREFIX="../../tubex" -DWITH_PYTHON=ON -D PYTHON_EXECUTABLE=/C/Python38/python.exe ..
+       - cmake -G "Visual Studio 16" -A Win32 -D CMAKE_CXX_FLAGS=" /D WIN32 /EHsc /D _CRT_SECURE_NO_WARNINGS /wd4267 /wd4244 /wd4305" -D CMAKE_C_FLAGS=" /D WIN32 /EHsc /D _CRT_SECURE_NO_WARNINGS /wd4267 /wd4244 /wd4305" -D CMAKE_PREFIX_PATH="../ibex" -D CMAKE_INSTALL_PREFIX="../../tubex" -DWITH_PYTHON=ON -D PYTHON_EXECUTABLE=/C/Python34/python.exe ..
        - cmake --build . --config Debug --target api
-       - cmake -G "Visual Studio 16" -A Win32 -D CMAKE_CXX_FLAGS=" /D WIN32 /EHsc /D _CRT_SECURE_NO_WARNINGS /wd4267 /wd4244 /wd4305" -D CMAKE_C_FLAGS=" /D WIN32 /EHsc /D _CRT_SECURE_NO_WARNINGS /wd4267 /wd4244 /wd4305" -D CMAKE_PREFIX_PATH="../ibex" -D CMAKE_INSTALL_PREFIX="../../tubex" -DWITH_PYTHON=ON -D PYTHON_EXECUTABLE=/C/Python38/python.exe ..
+       - cmake -G "Visual Studio 16" -A Win32 -D CMAKE_CXX_FLAGS=" /D WIN32 /EHsc /D _CRT_SECURE_NO_WARNINGS /wd4267 /wd4244 /wd4305" -D CMAKE_C_FLAGS=" /D WIN32 /EHsc /D _CRT_SECURE_NO_WARNINGS /wd4267 /wd4244 /wd4305" -D CMAKE_PREFIX_PATH="../ibex" -D CMAKE_INSTALL_PREFIX="../../tubex" -DWITH_PYTHON=ON -D PYTHON_EXECUTABLE=/C/Python34/python.exe ..
        - cmake --build . --config Debug --target install
        - cmake --build . --config Debug --target pip_package
        # Test python program and wheel...
-       - cp *.whl ../../tubex_lib-X.X.X-cp38-cp38-win32.whl
-       - pip install ../../tubex_lib-X.X.X-cp38-cp38-win32.whl
+       - cp *.whl ../../tubex_lib-X.X.X-cp34-cp34-win32.whl
+       - pip install ../../tubex_lib-X.X.X-cp34-cp34-win32.whl
        - python ../examples/tuto/01_getting_started/01_getting_started.py
        - cd ../..
        # Test C++ program and bundle...
@@ -191,7 +193,7 @@ jobs:
        <<: *deploy_base
        file: 
          - tubex_test_x86_vc16.zip
-         - tubex_lib-X.X.X-cp38-cp38-win32.whl
+         - tubex_lib-X.X.X-cp34-cp34-win32.whl
 
    - name: "Windows Visual Studio 2019 x64 C++ Python 3.8"
      os: windows
