--- a/.travis.yml
+++ b/.travis.yml
@@ -31,7 +31,7 @@ jobs:
        - cmake -D CMAKE_INSTALL_PREFIX="../../ibex" -D CMAKE_CXX_FLAGS="-fPIC" -D CMAKE_C_FLAGS="-fPIC" ..
        - cmake --build . --target install
        - cd ../..
-       - git clone -b windows https://github.com/lebarsfa/tubex-lib
+       - git clone -b windows https://github.com/SimonRohou/tubex-lib
        - cd tubex-lib 
        - git submodule init ; git submodule update
        - mkdir build ; cd build
@@ -89,7 +89,7 @@ jobs:
        - cmake -D CMAKE_INSTALL_PREFIX="../../ibex" -D CMAKE_CXX_FLAGS="-fPIC" -D CMAKE_C_FLAGS="-fPIC" ..
        - cmake --build . --target install
        - cd ../..
-       - git clone -b windows https://github.com/lebarsfa/tubex-lib
+       - git clone -b windows https://github.com/SimonRohou/tubex-lib
        - cd tubex-lib 
        - git submodule init ; git submodule update
        - mkdir build ; cd build
@@ -129,7 +129,7 @@ jobs:
 #     before_install: 
 #       - docker run --rm --privileged multiarch/qemu-user-static:register --reset
 #     script: 
-#       - "docker run -i -v \"${PWD}/..:${PWD}/..\" lebarsfa/pi:buster /bin/bash -c \"uname -a && cat /etc/os-release && cd ${PWD} && apt-get -q update && apt-get -y install sudo lsb-release wget unzip build-essential cmake git flex bison && lsb_release -a && git clone -b develop https://github.com/lebarsfa/ibex-lib.git && cd ibex-lib && mkdir build ; cd build && cmake -D CMAKE_INSTALL_PREFIX=../../ibex -D CMAKE_CXX_FLAGS=-fPIC -D CMAKE_C_FLAGS=-fPIC -D INTERVAL_LIB=filib .. && cmake --build . --target install && cd ../.. && git clone -b windows https://github.com/lebarsfa/tubex-lib && cd tubex-lib && git submodule init ; git submodule update && mkdir build ; cd build && cmake -D CMAKE_PREFIX_PATH=../ibex -D CMAKE_INSTALL_PREFIX=../../tubex .. && cmake --build . --target install && cd ../.. && wget http://www.ensta-bretagne.fr/lebars/Share/tubex_test_win.zip && unzip -q -o tubex_test_win.zip && rm -Rf tubex_test_win.zip && cd tubex_test_win && mv test .. && cd ../test && rm -Rf ../tubex_test_win && cmake . && cmake --build . && ./my_project \""
+#       - "docker run -i -v \"${PWD}/..:${PWD}/..\" lebarsfa/pi:buster /bin/bash -c \"uname -a && cat /etc/os-release && cd ${PWD} && apt-get -q update && apt-get -y install sudo lsb-release wget unzip build-essential cmake git flex bison && lsb_release -a && git clone -b develop https://github.com/lebarsfa/ibex-lib.git && cd ibex-lib && mkdir build ; cd build && cmake -D CMAKE_INSTALL_PREFIX=../../ibex -D CMAKE_CXX_FLAGS=-fPIC -D CMAKE_C_FLAGS=-fPIC -D INTERVAL_LIB=filib .. && cmake --build . --target install && cd ../.. && git clone -b windows https://github.com/SimonRohou/tubex-lib && cd tubex-lib && git submodule init ; git submodule update && mkdir build ; cd build && cmake -D CMAKE_PREFIX_PATH=../ibex -D CMAKE_INSTALL_PREFIX=../../tubex .. && cmake --build . --target install && cd ../.. && wget http://www.ensta-bretagne.fr/lebars/Share/tubex_test_win.zip && unzip -q -o tubex_test_win.zip && rm -Rf tubex_test_win.zip && cd tubex_test_win && mv test .. && cd ../test && rm -Rf ../tubex_test_win && cmake . && cmake --build . && ./my_project \""
 
    - name: "Mac OS Xcode 10.1"
      os: osx
@@ -141,7 +141,7 @@ jobs:
        - cmake -D CMAKE_INSTALL_PREFIX="../../ibex" -D CMAKE_CXX_FLAGS="-fPIC -Wno-everything" -D CMAKE_C_FLAGS="-fPIC -Wno-everything" ..
        - cmake --build . --target install
        - cd ../..
-       - git clone -b windows https://github.com/lebarsfa/tubex-lib
+       - git clone -b windows https://github.com/SimonRohou/tubex-lib
        - cd tubex-lib 
        - git submodule init ; git submodule update
        - mkdir build ; cd build
@@ -171,7 +171,7 @@ jobs:
        - cmake -G "Visual Studio 16" -A Win32 -D CMAKE_CXX_FLAGS=" /D WIN32 /EHsc /D _CRT_SECURE_NO_WARNINGS /wd4267 /wd4244 /wd4305" -D CMAKE_C_FLAGS=" /D WIN32 /EHsc /D _CRT_SECURE_NO_WARNINGS /wd4267 /wd4244 /wd4305" -D CMAKE_INSTALL_PREFIX="../../ibex" -D INTERVAL_LIB=filib ..
        - cmake --build . --config Release --target install
        - cd ../..
-       - git clone -b windows https://github.com/lebarsfa/tubex-lib
+       - git clone -b windows https://github.com/SimonRohou/tubex-lib
        - cd tubex-lib 
        - git submodule init ; git submodule update
        - mkdir build ; cd build
@@ -211,7 +211,7 @@ jobs:
        - cmake -G "Visual Studio 16" -A x64 -D CMAKE_CXX_FLAGS=" /D WIN32 /EHsc /D _CRT_SECURE_NO_WARNINGS /wd4267 /wd4244 /wd4305" -D CMAKE_C_FLAGS=" /D WIN32 /EHsc /D _CRT_SECURE_NO_WARNINGS /wd4267 /wd4244 /wd4305" -D CMAKE_INSTALL_PREFIX="../../ibex" -D INTERVAL_LIB=filib ..
        - cmake --build . --config Release --target install
        - cd ../..
-       - git clone -b windows https://github.com/lebarsfa/tubex-lib
+       - git clone -b windows https://github.com/SimonRohou/tubex-lib
        - cd tubex-lib 
        - git submodule init ; git submodule update
        - mkdir build ; cd build
@@ -257,7 +257,7 @@ jobs:
        - cmake -G "Visual Studio 15" -A Win32 -D CMAKE_CXX_FLAGS=" /D WIN32 /EHsc /D _CRT_SECURE_NO_WARNINGS /wd4267 /wd4244 /wd4305" -D CMAKE_C_FLAGS=" /D WIN32 /EHsc /D _CRT_SECURE_NO_WARNINGS /wd4267 /wd4244 /wd4305" -D CMAKE_INSTALL_PREFIX="../../ibex" -D INTERVAL_LIB=filib ..
        - cmake --build . --config Release --target install
        - cd ../..
-       - git clone -b windows https://github.com/lebarsfa/tubex-lib
+       - git clone -b windows https://github.com/SimonRohou/tubex-lib
        - cd tubex-lib 
        - git submodule init ; git submodule update
        - mkdir build ; cd build
@@ -297,7 +297,7 @@ jobs:
        - cmake -G "Visual Studio 15" -A x64 -D CMAKE_CXX_FLAGS=" /D WIN32 /EHsc /D _CRT_SECURE_NO_WARNINGS /wd4267 /wd4244 /wd4305" -D CMAKE_C_FLAGS=" /D WIN32 /EHsc /D _CRT_SECURE_NO_WARNINGS /wd4267 /wd4244 /wd4305" -D CMAKE_INSTALL_PREFIX="../../ibex" -D INTERVAL_LIB=filib ..
        - cmake --build . --config Release --target install
        - cd ../..
-       - git clone -b windows https://github.com/lebarsfa/tubex-lib
+       - git clone -b windows https://github.com/SimonRohou/tubex-lib
        - cd tubex-lib 
        - git submodule init ; git submodule update
        - mkdir build ; cd build
@@ -345,7 +345,7 @@ jobs:
        - cmake -G "Visual Studio 14" -A Win32 -D CMAKE_CXX_FLAGS=" /D WIN32 /EHsc /D _CRT_SECURE_NO_WARNINGS /wd4267 /wd4244 /wd4305" -D CMAKE_C_FLAGS=" /D WIN32 /EHsc /D _CRT_SECURE_NO_WARNINGS /wd4267 /wd4244 /wd4305" -D CMAKE_INSTALL_PREFIX="../../ibex" -D INTERVAL_LIB=filib ..
        - cmake --build . --config Release --target install
        - cd ../..
-       - git clone -b windows https://github.com/lebarsfa/tubex-lib
+       - git clone -b windows https://github.com/SimonRohou/tubex-lib
        - cd tubex-lib 
        - git submodule init ; git submodule update
        - mkdir build ; cd build
@@ -393,7 +393,7 @@ jobs:
        - cmake -G "Visual Studio 14" -A Win32 -D CMAKE_CXX_FLAGS=" /D WIN32 /EHsc /D _CRT_SECURE_NO_WARNINGS /wd4267 /wd4244 /wd4305" -D CMAKE_C_FLAGS=" /D WIN32 /EHsc /D _CRT_SECURE_NO_WARNINGS /wd4267 /wd4244 /wd4305" -D CMAKE_INSTALL_PREFIX="../../ibex" -D INTERVAL_LIB=filib ..
        - cmake --build . --config Release --target install
        - cd ../..
-       - git clone -b windows https://github.com/lebarsfa/tubex-lib
+       - git clone -b windows https://github.com/SimonRohou/tubex-lib
        - cd tubex-lib 
        - git submodule init ; git submodule update
        - mkdir build ; cd build
@@ -425,7 +425,7 @@ jobs:
        - cmake -G "Visual Studio 14" -A x64 -D CMAKE_CXX_FLAGS=" /D WIN32 /EHsc /D _CRT_SECURE_NO_WARNINGS /wd4267 /wd4244 /wd4305" -D CMAKE_C_FLAGS=" /D WIN32 /EHsc /D _CRT_SECURE_NO_WARNINGS /wd4267 /wd4244 /wd4305" -D CMAKE_INSTALL_PREFIX="../../ibex" -D INTERVAL_LIB=filib ..
        - cmake --build . --config Release --target install
        - cd ../..
-       - git clone -b windows https://github.com/lebarsfa/tubex-lib
+       - git clone -b windows https://github.com/SimonRohou/tubex-lib
        - cd tubex-lib 
        - git submodule init ; git submodule update
        - mkdir build ; cd build
@@ -473,7 +473,7 @@ jobs:
        - cmake -G "Visual Studio 14" -A x64 -D CMAKE_CXX_FLAGS=" /D WIN32 /EHsc /D _CRT_SECURE_NO_WARNINGS /wd4267 /wd4244 /wd4305" -D CMAKE_C_FLAGS=" /D WIN32 /EHsc /D _CRT_SECURE_NO_WARNINGS /wd4267 /wd4244 /wd4305" -D CMAKE_INSTALL_PREFIX="../../ibex" -D INTERVAL_LIB=filib ..
        - cmake --build . --config Release --target install
        - cd ../..
-       - git clone -b windows https://github.com/lebarsfa/tubex-lib
+       - git clone -b windows https://github.com/SimonRohou/tubex-lib
        - cd tubex-lib 
        - git submodule init ; git submodule update
        - mkdir build ; cd build
@@ -505,7 +505,7 @@ jobs:
        - cmake -G "Visual Studio 14" -A x64 -D CMAKE_CXX_FLAGS=" /D WIN32 /EHsc /D _CRT_SECURE_NO_WARNINGS /wd4267 /wd4244 /wd4305" -D CMAKE_C_FLAGS=" /D WIN32 /EHsc /D _CRT_SECURE_NO_WARNINGS /wd4267 /wd4244 /wd4305" -D CMAKE_INSTALL_PREFIX="../../ibex" -D INTERVAL_LIB=filib ..
        - cmake --build . --config Release --target install
        - cd ../..
-       - git clone -b windows https://github.com/lebarsfa/tubex-lib
+       - git clone -b windows https://github.com/SimonRohou/tubex-lib
        - cd tubex-lib 
        - git submodule init ; git submodule update
        - mkdir build ; cd build
@@ -557,7 +557,7 @@ jobs:
        - cmake -G "MSYS Makefiles" -D CMAKE_INSTALL_PREFIX="../../ibex" -D CMAKE_CXX_FLAGS="-fPIC" -D CMAKE_C_FLAGS="-fPIC" -D INTERVAL_LIB=filib ..
        - cmake --build . --target install
        - cd ../..
-       - git clone -b windows https://github.com/lebarsfa/tubex-lib
+       - git clone -b windows https://github.com/SimonRohou/tubex-lib
        - cd tubex-lib 
        - git submodule init ; git submodule update
        - mkdir build ; cd build
@@ -594,7 +594,7 @@ jobs:
        - cmake -G "MSYS Makefiles" -D CMAKE_INSTALL_PREFIX="../../ibex" -D CMAKE_CXX_FLAGS="-fPIC" -D CMAKE_C_FLAGS="-fPIC" -D INTERVAL_LIB=filib ..
        - cmake --build . --target install
        - cd ../..
-       - git clone -b windows https://github.com/lebarsfa/tubex-lib
+       - git clone -b windows https://github.com/SimonRohou/tubex-lib
        - cd tubex-lib 
        - git submodule init ; git submodule update
        - mkdir build ; cd build
